--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="A python enthusiast personal webpage">
+    <title>Tobiasz Kędzierski - tobked.github.io</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- FONT -->
     <script src="https://use.typekit.net/tdg4chw.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-    <!-- cSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="static/css/normalize.css">
     <link rel="stylesheet" href="static/css/skeleton.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
-    <title>tobked.github.io</title>
 
 </head>
 <body>
