--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <!--<a class="icon yt" href="https://www.youtube.com/channel/UCbcnxiuuOQBbfPk2zG-wG4g"></a>-->
             </div>
 
-            <p class="credit">Photo by Nicholas Kwok on Unsplash</p>
+            <p class="credit">High Dynamic Range selfie @2013</p>
         </div>
     </div>
 </div>
