Add link to blog

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="icon mail" href="mailto:tobiaszkedzierski@gmail.com"></a>
                 <a class="icon github" href="https://github.com/TobKed"></a>
                 <a class="icon linkedin" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US"></a>
-                <!--<a class="icon pen" href="https://tobked.github.io/blog/"></a>-->
+                <a class="icon pen" href="https://tobked.github.io/blog/"></a>
                 <!--<a class="icon yt" href="https://www.youtube.com/channel/UCbcnxiuuOQBbfPk2zG-wG4g"></a>-->
             </div>
 
