--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one-half column right-column">
             <div class="text-container">
                 <h5>Hi,</h5>
-                <h1>I’m Tobiasz Kędzierski &mdash; a python enthusiast.</h1>
+                <h1>I’m Tobiasz Kędzierski &mdash; <br>a python enthusiast.</h1>
                 <a class="icon mail" href="mailto:tobiaszkedzierski@gmail.com"></a>
                 <a class="icon github" href="https://github.com/TobKed"></a>
                 <a class="icon linkedin" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US"></a>
