--- a/index.html
+++ b/index.html
@@ -28,11 +28,22 @@
             <div class="text-container">
                 <h5>Hi,</h5>
                 <h1>I’m Tobiasz Kędzierski &mdash; <br>a python enthusiast.</h1>
-                <a class="icon mail" href="mailto:tobiaszkedzierski@gmail.com"></a>
-                <a class="icon github" href="https://github.com/TobKed"></a>
-                <a class="icon linkedin" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US"></a>
-                <a class="icon pen" href="https://tobked.github.io/blog/"></a>
-                <!--<a class="icon yt" href="https://www.youtube.com/channel/UCbcnxiuuOQBbfPk2zG-wG4g"></a>-->
+                <a class="button button-primary custom-button" href="https://tobked.github.io/blog/">
+                    <div class="icon pen"></div>
+                    <div class="custom-button-text">blog</div>
+                </a>
+                <a class="button button-primary custom-button" href="https://github.com/TobKed">
+                    <div class="icon github"></div>
+                    <div class="custom-button-text">github</div>
+                </a>
+                <a class="button button-primary custom-button" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US">
+                    <div class="icon linkedin"></div>
+                    <div class="custom-button-text">LinkedIn</div>
+                </a>
+                <a class="button button-primary custom-button" href="mailto:tobiaszkedzierski@gmail.com">
+                    <div class="icon mail"></div>
+                    <div class="custom-button-text">mail</div>
+                </a>
             </div>
 
             <p class="credit">High Dynamic Range selfie @2013</p>
