New photo, fix background color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
             </div>
 
-            <p class="credit">High Dynamic Range selfie @2013</p>
+            <p class="credit">photo by <a class="custom-link" href="https://juliakaczorowska.pl/">Julia Kaczorowska</a></p>
         </div>
     </div>
 </div>
