--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <div class="icon pen"></div>
                     <div class="custom-button-text">blog</div>
                 </a>
+                <a class="button button-primary custom-button" href="https://tobiaszkedzierski.medium.com/">
+                    <div class="icon medium"></div>
+                    <div class="custom-button-text">medium</div>
+                </a>
                 <a class="button button-primary custom-button" href="https://github.com/TobKed">
                     <div class="icon github"></div>
                     <div class="custom-button-text">github</div>
