--- a/index.html
+++ b/index.html
@@ -27,22 +27,26 @@
         <div class="one-half column right-column">
             <div class="text-container">
                 <h5>Hi,</h5>
-                <h1>I’m Tobiasz Kędzierski &mdash; <br>a python enthusiast.</h1>
+                <h1>I’m Tobiasz Kędzierski &mdash; <br>a Python and Google Cloud enthusiast.</h1>
                 <a class="button button-primary custom-button" href="https://tobked.github.io/blog/">
                     <div class="icon pen"></div>
                     <div class="custom-button-text">blog</div>
-                </a>
-                <a class="button button-primary custom-button" href="https://tobiaszkedzierski.medium.com/">
-                    <div class="icon medium"></div>
-                    <div class="custom-button-text">medium</div>
                 </a>
                 <a class="button button-primary custom-button" href="https://github.com/TobKed">
                     <div class="icon github"></div>
                     <div class="custom-button-text">github</div>
                 </a>
+                <a class="button button-primary custom-button" href="https://www.credential.net/profile/tobiaszkdzierski610060/wallet">
+                    <div class="icon gcp"></div>
+                    <div class="custom-button-text">Google Cloud Certificates</div>
+                </a>
                 <a class="button button-primary custom-button" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US">
                     <div class="icon linkedin"></div>
                     <div class="custom-button-text">LinkedIn</div>
+                </a>
+                <a class="button button-primary custom-button" href="https://tobiaszkedzierski.medium.com/">
+                    <div class="icon medium"></div>
+                    <div class="custom-button-text">medium</div>
                 </a>
                 <a class="button button-primary custom-button" href="mailto:tobiaszkedzierski@gmail.com">
                     <div class="icon mail"></div>
