--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="description" content="A python enthusiast personal webpage">
-    <title>Tobiasz Kędzierski - tobked.github.io</title>
+    <meta name="description" content="Tobiasz Kędzierski - Python and Google Cloud">
+    <title>Tobiasz Kędzierski - tobked.dev</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
