Update main text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one-half column right-column">
             <div class="text-container">
                 <h5>Hi,</h5>
-                <h1>I’m Tobiasz Kędzierski &mdash; <br>a Python and Google Cloud enthusiast.</h1>
+                <h1>I’m Tobiasz Kędzierski &mdash; <br>a Python and Google Cloud developer.</h1>
                 <a class="button button-primary custom-button" href="https://tobked.github.io/blog/">
                     <div class="icon pen"></div>
                     <div class="custom-button-text">blog</div>
