Add link to credly

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <div class="icon github"></div>
                     <div class="custom-button-text">github</div>
                 </a>
+                <a class="button button-primary custom-button" href="https://www.credly.com/users/tobiasz-kedzierski">
+                    <div class="icon credly"></div>
+                    <div class="custom-button-text">All Certificates</div>
+                </a>
                 <a class="button button-primary custom-button" href="https://www.credential.net/profile/tobiaszkdzierski610060/wallet">
                     <div class="icon gcp"></div>
                     <div class="custom-button-text">Google Cloud Certificates</div>
