--- a/index.html
+++ b/index.html
@@ -28,37 +28,37 @@
             <div class="text-container">
                 <h5>Hi,</h5>
                 <h1>I’m Tobiasz Kędzierski &mdash; <br>a Python and Google Cloud developer.</h1>
-                <a class="button button-primary custom-button" href="https://tobked.github.io/blog/">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="https://tobked.github.io/blog/">
                     <div class="icon pen"></div>
                     <div class="custom-button-text">blog</div>
                 </a>
-                <a class="button button-primary custom-button" href="https://github.com/TobKed">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="https://github.com/TobKed">
                     <div class="icon github"></div>
                     <div class="custom-button-text">github</div>
                 </a>
-                <a class="button button-primary custom-button" href="https://www.credly.com/users/tobiasz-kedzierski">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="https://www.credly.com/users/tobiasz-kedzierski">
                     <div class="icon credly"></div>
                     <div class="custom-button-text">All Certificates</div>
                 </a>
-                <a class="button button-primary custom-button" href="https://www.credential.net/profile/tobiaszkdzierski610060/wallet">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="https://www.credential.net/profile/tobiaszkdzierski610060/wallet">
                     <div class="icon gcp"></div>
                     <div class="custom-button-text">Google Cloud Certificates</div>
                 </a>
-                <a class="button button-primary custom-button" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/tobiaszkedzierski/?locale=en_US">
                     <div class="icon linkedin"></div>
                     <div class="custom-button-text">LinkedIn</div>
                 </a>
-                <a class="button button-primary custom-button" href="https://tobiaszkedzierski.medium.com/">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="https://tobiaszkedzierski.medium.com/">
                     <div class="icon medium"></div>
                     <div class="custom-button-text">medium</div>
                 </a>
-                <a class="button button-primary custom-button" href="mailto:tobiaszkedzierski@gmail.com">
+                <a class="button button-primary custom-button" target="_blank" rel="noopener noreferrer" href="mailto:tobiaszkedzierski@gmail.com">
                     <div class="icon mail"></div>
                     <div class="custom-button-text">mail</div>
                 </a>
             </div>
 
-            <p class="credit">photo by <a class="custom-link" href="https://juliakaczorowska.pl/">Julia Kaczorowska</a></p>
+            <p class="credit">photo by <a class="custom-link" target="_blank" rel="noopener noreferrer" href="https://juliakaczorowska.pl/">Julia Kaczorowska</a></p>
         </div>
     </div>
 </div>
